--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/viewAnimator"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/itemListView"
@@ -80,4 +82,13 @@
                 />
         </RelativeLayout>
     </ViewAnimator>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        />
+
 </RelativeLayout>
